
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int write (int,void const*,size_t) ;

int writen(int fd, const void *buf, size_t len)
{
 int o = 0, n;

 while (len > 0) {
  if ((n = write(fd, buf+o, len)) < 0)
   return n;
  len -= n;
  o += n;
 }
 return o;
}
